--- a/System_eng_Part3.ipynb
+++ b/System_eng_Part3.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMvTfGPDazBIjs24lB3Vck8",
+      "gpuType": "L4",
+      "authorship_tag": "ABX9TyMxiCInTHsE5se9t1mObQU0",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -13,7 +14,8 @@
     },
     "language_info": {
       "name": "python"
-    }
+    },
+    "accelerator": "GPU"
   },
   "cells": [
     {
@@ -28,13 +30,258 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "D72PV_cpwfZV"
-      },
-      "outputs": [],
       "source": [
-        "print(\"nj\")"
+        "pip install langchain openai pypdf chroma streamlit langchain_openai langchain_community langchain transformers bitsandbytes accelerate torch faiss-gpu faiss-cpu"
+      ],
+      "metadata": {
+        "id": "pRhoGD70xtE4"
+      },
+      "execution_count": 20,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from huggingface_hub import login\n",
+        "from transformers import AutoTokenizer, AutoModelForCausalLM\n",
+        "from transformers import pipeline\n",
+        "\n",
+        "login(token = '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')"
+      ],
+      "metadata": {
+        "id": "9khH96Vv2qLW"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 22,
+      "metadata": {
+        "id": "D72PV_cpwfZV",
+        "outputId": "3f98d70b-5c1d-4f0d-af77-cd947178fee2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting app.py\n"
+          ]
+        }
+      ],
+      "source": [
+        "%%writefile app.py\n",
+        "import streamlit as st\n",
+        "from langchain_openai import OpenAIEmbeddings\n",
+        "from langchain_community.document_loaders import WebBaseLoader\n",
+        "from langchain_community.document_loaders import PyPDFLoader\n",
+        "from langchain_community.vectorstores import FAISS # it is vector database. we will use FAISS database. It is created by Facebook.\n",
+        "from langchain.text_splitter import RecursiveCharacterTextSplitter\n",
+        "from langchain_community.embeddings import CohereEmbeddings\n",
+        "from langchain_community.embeddings import HuggingFaceInferenceAPIEmbeddings\n",
+        "from huggingface_hub import login\n",
+        "from transformers import AutoTokenizer, AutoModelForCausalLM\n",
+        "from transformers import pipeline\n",
+        "\n",
+        "embeddings = HuggingFaceInferenceAPIEmbeddings(\n",
+        "    api_key='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',\n",
+        "    model_name=\"sentence-transformers/all-MiniLM-l6-v2\"\n",
+        ")\n",
+        "\n",
+        "def rag_with_url(prompt):\n",
+        "  from langchain_community.document_loaders import WebBaseLoader\n",
+        "\n",
+        "  target_url=\"https://kpmg.com/tr/tr/home/gorusler/2023/12/uretken-yapay-zeka-uygulamalarinin-kurumsallasma-yaklasimi.html\"\n",
+        "\n",
+        "  loader = WebBaseLoader(target_url) # we create a loader object and we assign to this object.\n",
+        "  raw_documents = loader.load() # we load document from url. (type is document)#load url\n",
+        "\n",
+        "\n",
+        "  #create chunk using splitters\n",
+        "  #below code can run without any parameters but to reach the best answer you should try different parameters.\n",
+        "  #  text_splitter = RecursiveCharacterTextSplitter()\n",
+        "  text_splitter = RecursiveCharacterTextSplitter(\n",
+        "      chunk_size=1000,\n",
+        "      chunk_overlap=0,\n",
+        "      length_function=len # it provides that how to estimate lenght of chunk. we will use len because of python list rule.\n",
+        "  )\n",
+        "\n",
+        "  # we run split_documents method which is inside of text_splitter and save to splitted_document\n",
+        "  splitted_document = text_splitter.split_documents(raw_documents)\n",
+        "\n",
+        "  # we need to save splited documents in vector database.\n",
+        "  # FAISS create vectors from our documents using our embedding model and save vectordatabase.\n",
+        "  vectorstore = FAISS.from_documents(splitted_document, embeddings)\n",
+        "  # we reach as_retriever method in vectorstore. We convert vector store into retriever.\n",
+        "  # retriever won't retrieve all vectors, it retrieves vector considering context similarity among vector and prompt.\n",
+        "  #mostly, similarity is estimated by cosine similarity.\n",
+        "  retriever = vectorstore.as_retriever()\n",
+        "  relevant_documents = retriever.get_relevant_documents(prompt) # it retrieves the most similar document accordingly our prompt. It can be 3,4 or more documents. Default value is 4.\n",
+        "\n",
+        "  context_data =\"\"\n",
+        "\n",
+        "  #Also, we use build function instead of the below code.\n",
+        "  for document in relevant_documents:\n",
+        "    context_data = context_data + \" \" + document.page_content # document has two features which are metada and page_content.\n",
+        "    #because the main data is in context_data.\n",
+        "  final_prompt = f\"\"\"Şöyle bir sorum var: {prompt}\n",
+        "  Bu soruyu yanıtlamak için elimizde şu bilgiler var: {context_data} .\n",
+        "  Bu sorunun yanıtını vermek için yalnızca sana burada verdiğim eldeki bilgileri kullan. Bunların dışına asla çıkma.\n",
+        "  \"\"\"\n",
+        "\n",
+        "  return final_prompt\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "from transformers import AutoTokenizer, AutoModelForCausalLM, BitsAndBytesConfig\n",
+        "import torch\n",
+        "\n",
+        "model_id = \"meta-llama/Meta-Llama-3-8B-Instruct\"\n",
+        "\n",
+        "# use quantization to lower GPU usage\n",
+        "bnb_config = BitsAndBytesConfig(\n",
+        "    load_in_4bit=True, bnb_4bit_use_double_quant=True, bnb_4bit_quant_type=\"nf4\", bnb_4bit_compute_dtype=torch.bfloat16\n",
+        ")\n",
+        "\n",
+        "tokenizer = AutoTokenizer.from_pretrained(model_id)\n",
+        "\n",
+        "model = AutoModelForCausalLM.from_pretrained(\n",
+        "    model_id,\n",
+        "    torch_dtype=torch.bfloat16,\n",
+        "    device_map=\"auto\",\n",
+        "    quantization_config=bnb_config\n",
+        ")\n",
+        "\n",
+        "terminators = [\n",
+        "    tokenizer.eos_token_id,\n",
+        "    tokenizer.convert_tokens_to_ids(\"<|eot_id|>\")\n",
+        "]\n",
+        "\n",
+        "\n",
+        "# App title\n",
+        "st.set_page_config(page_title=\"🦙💬 Sistem Mühendisliği Giriş Chatbot\")\n",
+        "\n",
+        "# Replicate Credentials\n",
+        "with st.sidebar:\n",
+        "\n",
+        "    st.title('🦙💬 Sistem Mühendisliği Giriş')\n",
+        "\n",
+        "    st.subheader('Models and parameters')\n",
+        "\n",
+        "    temperature = st.sidebar.slider('temperature', min_value=0.01, max_value=5.0, value=0.1, step=0.01)\n",
+        "    top_p = st.sidebar.slider('top_p', min_value=0.01, max_value=1.0, value=0.9, step=0.01)\n",
+        "    max_length = st.sidebar.slider('max_length', min_value=32, max_value=128, value=120, step=8)\n",
+        "    st.markdown('📖 Learn how to build this app in this [blog](https://blog.streamlit.io/how-to-build-a-llama-2-chatbot/)!')\n",
+        "\n",
+        "# Store LLM generated responses\n",
+        "if \"messages\" not in st.session_state.keys():\n",
+        "    st.session_state.messages = [{\"role\": \"assistant\", \"content\": \"How may I assist you today?\"}]\n",
+        "\n",
+        "# Display or clear chat messages\n",
+        "for message in st.session_state.messages:\n",
+        "    with st.chat_message(message[\"role\"]):\n",
+        "        st.write(message[\"content\"])\n",
+        "\n",
+        "def clear_chat_history():\n",
+        "    st.session_state.messages = [{\"role\": \"assistant\", \"content\": \"How may I assist you today?\"}]\n",
+        "st.sidebar.button('Clear Chat History', on_click=clear_chat_history)\n",
+        "\n",
+        "# Function for generating LLaMA2 response. Refactored from https://github.com/a16z-infra/llama2-chatbot\n",
+        "def generate_llama2_response(prompt_input):\n",
+        "\n",
+        "\n",
+        "    SYS_PROMPT = \"\"\"You are an assistant for answering questions.\n",
+        "    You are given the extracted parts of a long document and a question. Provide a conversational answer.\n",
+        "    If you don't know the answer, just say \"I do not know.\" Don't make up an answer.\"\"\"\n",
+        "\n",
+        "\n",
+        "    messages = [{\"role\":\"system\",\"content\":SYS_PROMPT},{\"role\":\"user\",\"content\":prompt_input}]\n",
+        "\n",
+        "    input_ids = tokenizer.apply_chat_template(\n",
+        "        messages,\n",
+        "        add_generation_prompt=True,\n",
+        "        return_tensors=\"pt\"\n",
+        "    ).to(model.device)\n",
+        "\n",
+        "    outputs = model.generate(\n",
+        "      input_ids,\n",
+        "      max_new_tokens=1024,\n",
+        "      eos_token_id=terminators,\n",
+        "      do_sample=True,\n",
+        "      temperature=0.6,\n",
+        "      top_p=0.9,\n",
+        "    )\n",
+        "\n",
+        "    response = outputs[0][input_ids.shape[-1]:]\n",
+        "    return tokenizer.decode(response, skip_special_tokens=True)\n",
+        "\n",
+        "\n",
+        "# User-provided prompt\n",
+        "if prompt := st.chat_input(\"Mesajınızı Giriniz:\"):\n",
+        "    st.session_state.messages.append({\"role\": \"user\", \"content\": prompt})\n",
+        "    with st.chat_message(\"user\"):\n",
+        "        st.write(prompt)\n",
+        "\n",
+        "# Generate a new response if last message is not from assistant\n",
+        "if st.session_state.messages[-1][\"role\"] != \"assistant\":\n",
+        "    with st.chat_message(\"assistant\"):\n",
+        "        with st.spinner(\"Thinking...\"):\n",
+        "            prompt_input=rag_with_url(prompt)\n",
+        "            response = generate_llama2_response(prompt_input)\n",
+        "            placeholder = st.empty()\n",
+        "            full_response = ''\n",
+        "            for item in response:\n",
+        "                full_response += item\n",
+        "                placeholder.markdown(full_response)\n",
+        "            placeholder.markdown(full_response)\n",
+        "    message = {\"role\": \"assistant\", \"content\": full_response}\n",
+        "    st.session_state.messages.append(message)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!npm install localtunnel\n",
+        "!streamlit run /content/app.py &>/content/logs.txt &\n",
+        "!npx localtunnel --port 8501"
+      ],
+      "metadata": {
+        "id": "UrD8NWtKxltj",
+        "outputId": "ec388d57-b726-481a-fa15-80e403e4ee0b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\u001b[K\u001b[?25h\u001b[37;40mnpm\u001b[0m \u001b[0m\u001b[30;43mWARN\u001b[0m \u001b[0m\u001b[35msaveError\u001b[0m ENOENT: no such file or directory, open '/content/package.json'\n",
+            "\u001b[0m\u001b[37;40mnpm\u001b[0m \u001b[0m\u001b[30;43mWARN\u001b[0m \u001b[0m\u001b[35menoent\u001b[0m ENOENT: no such file or directory, open '/content/package.json'\n",
+            "\u001b[0m\u001b[37;40mnpm\u001b[0m \u001b[0m\u001b[30;43mWARN\u001b[0m\u001b[35m\u001b[0m content No description\n",
+            "\u001b[0m\u001b[37;40mnpm\u001b[0m \u001b[0m\u001b[30;43mWARN\u001b[0m\u001b[35m\u001b[0m content No repository field.\n",
+            "\u001b[0m\u001b[37;40mnpm\u001b[0m \u001b[0m\u001b[30;43mWARN\u001b[0m\u001b[35m\u001b[0m content No README data\n",
+            "\u001b[0m\u001b[37;40mnpm\u001b[0m \u001b[0m\u001b[30;43mWARN\u001b[0m\u001b[35m\u001b[0m content No license field.\n",
+            "\u001b[0m\n",
+            "\u001b[K\u001b[?25h+ localtunnel@2.0.2\n",
+            "updated 1 package and audited 36 packages in 0.49s\n",
+            "\n",
+            "3 packages are looking for funding\n",
+            "  run `npm fund` for details\n",
+            "\n",
+            "found 2 \u001b[93mmoderate\u001b[0m severity vulnerabilities\n",
+            "  run `npm audit fix` to fix them, or `npm audit` for details\n",
+            "\u001b[K\u001b[?25hnpx: installed 22 in 1.15s\n",
+            "your url is: https://proud-parts-repair.loca.lt\n"
+          ]
+        }
       ]
     }
   ]
