--- a/System_eng_Part3.ipynb
+++ b/System_eng_Part3.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "L4",
-      "authorship_tag": "ABX9TyMxiCInTHsE5se9t1mObQU0",
+      "authorship_tag": "ABX9TyPZsNJtHE+SgQtz46S+6Yof",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,13 +31,26 @@
     {
       "cell_type": "code",
       "source": [
-        "pip install langchain openai pypdf chroma streamlit langchain_openai langchain_community langchain transformers bitsandbytes accelerate torch faiss-gpu faiss-cpu"
+        "pip install langchain openai pypdf chroma streamlit langchain_openai langchain_community langchain transformers bitsandbytes accelerate torch faiss-gpu faiss-cpu langchain_chroma langchain_experimental"
       ],
       "metadata": {
-        "id": "pRhoGD70xtE4"
+        "id": "pRhoGD70xtE4",
+        "outputId": "a7c077d2-02a0-4253-b3ec-68d43d5902cc",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": 20,
-      "outputs": []
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Installing collected packages: langchain_experimental\n",
+            "Successfully installed langchain_experimental-0.0.61\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -49,17 +62,32 @@
         "login(token = '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')"
       ],
       "metadata": {
-        "id": "9khH96Vv2qLW"
+        "id": "9khH96Vv2qLW",
+        "outputId": "13a2305f-7d03-42ef-8142-15817c6ff20b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "The token has not been saved to the git credentials helper. Pass `add_to_git_credential=True` in this function directly or `--add-to-git-credential` if using via `huggingface-cli` if you want to set the git credential as well.\n",
+            "Token is valid (permission: read).\n",
+            "Your token has been saved to /root/.cache/huggingface/token\n",
+            "Login successful\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 8,
       "metadata": {
         "id": "D72PV_cpwfZV",
-        "outputId": "3f98d70b-5c1d-4f0d-af77-cd947178fee2",
+        "outputId": "4dc177ee-da73-42bb-9cfb-3504b6e6d3eb",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -86,6 +114,9 @@
         "from huggingface_hub import login\n",
         "from transformers import AutoTokenizer, AutoModelForCausalLM\n",
         "from transformers import pipeline\n",
+        "from langchain_chroma import Chroma\n",
+        "from langchain_core.documents import Document\n",
+        "from langchain_experimental.text_splitter import SemanticChunker\n",
         "\n",
         "embeddings = HuggingFaceInferenceAPIEmbeddings(\n",
         "    api_key='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',\n",
@@ -103,23 +134,39 @@
         "\n",
         "  #create chunk using splitters\n",
         "  #below code can run without any parameters but to reach the best answer you should try different parameters.\n",
-        "  #  text_splitter = RecursiveCharacterTextSplitter()\n",
-        "  text_splitter = RecursiveCharacterTextSplitter(\n",
-        "      chunk_size=1000,\n",
-        "      chunk_overlap=0,\n",
-        "      length_function=len # it provides that how to estimate lenght of chunk. we will use len because of python list rule.\n",
-        "  )\n",
+        "\n",
+        "\n",
+        "  text_splitter = SemanticChunker(embeddings, breakpoint_threshold_type=\"percentile\")\n",
         "\n",
         "  # we run split_documents method which is inside of text_splitter and save to splitted_document\n",
         "  splitted_document = text_splitter.split_documents(raw_documents)\n",
         "\n",
+        "  custom_documents = []\n",
+        "\n",
+        "  for i, raw_doc in enumerate(splitted_document):\n",
+        "    new_doc = Document(\n",
+        "            page_content=raw_doc.page_content,\n",
+        "            metadata = {\n",
+        "                \"source\": raw_doc.metadata[\"source\"],\n",
+        "                \"title\" : raw_doc.metadata[\"title\"],\n",
+        "                \"description\" : raw_doc.metadata[\"description\"],\n",
+        "                \"language\" : raw_doc.metadata[\"language\"],\n",
+        "                \"doc_id\" : i\n",
+        "            }\n",
+        "    )\n",
+        "    custom_documents.append(new_doc)\n",
+        "\n",
         "  # we need to save splited documents in vector database.\n",
         "  # FAISS create vectors from our documents using our embedding model and save vectordatabase.\n",
-        "  vectorstore = FAISS.from_documents(splitted_document, embeddings)\n",
+        "  #vectorstore = FAISS.from_documents(splitted_document, embeddings)\n",
+        "  vectorstore = Chroma.from_documents(custom_documents, embeddings)\n",
         "  # we reach as_retriever method in vectorstore. We convert vector store into retriever.\n",
         "  # retriever won't retrieve all vectors, it retrieves vector considering context similarity among vector and prompt.\n",
         "  #mostly, similarity is estimated by cosine similarity.\n",
-        "  retriever = vectorstore.as_retriever()\n",
+        "  retriever = vectorstore.as_retriever(\n",
+        "    search_type=\"mmr\",\n",
+        "    search_kwargs={'k': 4, 'lambda_mult': 0.25}\n",
+        "  )\n",
         "  relevant_documents = retriever.get_relevant_documents(prompt) # it retrieves the most similar document accordingly our prompt. It can be 3,4 or more documents. Default value is 4.\n",
         "\n",
         "  context_data =\"\"\n",
@@ -134,7 +181,6 @@
         "  \"\"\"\n",
         "\n",
         "  return final_prompt\n",
-        "\n",
         "\n",
         "\n",
         "\n",
@@ -252,12 +298,12 @@
       ],
       "metadata": {
         "id": "UrD8NWtKxltj",
-        "outputId": "ec388d57-b726-481a-fa15-80e403e4ee0b",
+        "outputId": "063a04f6-960b-4cb2-9819-1e7ef731d7ea",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
@@ -271,18 +317,123 @@
             "\u001b[0m\u001b[37;40mnpm\u001b[0m \u001b[0m\u001b[30;43mWARN\u001b[0m\u001b[35m\u001b[0m content No license field.\n",
             "\u001b[0m\n",
             "\u001b[K\u001b[?25h+ localtunnel@2.0.2\n",
-            "updated 1 package and audited 36 packages in 0.49s\n",
+            "updated 1 package and audited 36 packages in 0.435s\n",
             "\n",
             "3 packages are looking for funding\n",
             "  run `npm fund` for details\n",
             "\n",
             "found 2 \u001b[93mmoderate\u001b[0m severity vulnerabilities\n",
             "  run `npm audit fix` to fix them, or `npm audit` for details\n",
-            "\u001b[K\u001b[?25hnpx: installed 22 in 1.15s\n",
-            "your url is: https://proud-parts-repair.loca.lt\n"
+            "\u001b[K\u001b[?25hnpx: installed 22 in 1.202s\n",
+            "your url is: https://many-walls-press.loca.lt\n",
+            "^C\n"
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import bs4\n",
+        "from langchain.chains import create_history_aware_retriever, create_retrieval_chain\n",
+        "from langchain.chains.combine_documents import create_stuff_documents_chain\n",
+        "from langchain_chroma import Chroma\n",
+        "from langchain_community.chat_message_histories import ChatMessageHistory\n",
+        "from langchain_community.document_loaders import WebBaseLoader\n",
+        "from langchain_core.chat_history import BaseChatMessageHistory\n",
+        "from langchain_core.prompts import ChatPromptTemplate, MessagesPlaceholder\n",
+        "from langchain_core.runnables.history import RunnableWithMessageHistory\n",
+        "from langchain_openai import ChatOpenAI, OpenAIEmbeddings\n",
+        "from langchain_text_splitters import RecursiveCharacterTextSplitter\n",
+        "\n",
+        "llm = ChatOpenAI(model=\"gpt-3.5-turbo\", temperature=0)\n",
+        "\n",
+        "\n",
+        "### Construct retriever ###\n",
+        "loader = WebBaseLoader(\n",
+        "    web_paths=(\"https://lilianweng.github.io/posts/2023-06-23-agent/\",),\n",
+        "    bs_kwargs=dict(\n",
+        "        parse_only=bs4.SoupStrainer(\n",
+        "            class_=(\"post-content\", \"post-title\", \"post-header\")\n",
+        "        )\n",
+        "    ),\n",
+        ")\n",
+        "docs = loader.load()\n",
+        "\n",
+        "text_splitter = RecursiveCharacterTextSplitter(chunk_size=1000, chunk_overlap=200)\n",
+        "splits = text_splitter.split_documents(docs)\n",
+        "vectorstore = Chroma.from_documents(documents=splits, embedding=OpenAIEmbeddings())\n",
+        "retriever = vectorstore.as_retriever()\n",
+        "\n",
+        "\n",
+        "### Contextualize question ###\n",
+        "contextualize_q_system_prompt = \"\"\"Given a chat history and the latest user question \\\n",
+        "which might reference context in the chat history, formulate a standalone question \\\n",
+        "which can be understood without the chat history. Do NOT answer the question, \\\n",
+        "just reformulate it if needed and otherwise return it as is.\"\"\"\n",
+        "contextualize_q_prompt = ChatPromptTemplate.from_messages(\n",
+        "    [\n",
+        "        (\"system\", contextualize_q_system_prompt),\n",
+        "        MessagesPlaceholder(\"chat_history\"),\n",
+        "        (\"human\", \"{input}\"),\n",
+        "    ]\n",
+        ")\n",
+        "history_aware_retriever = create_history_aware_retriever(\n",
+        "    llm, retriever, contextualize_q_prompt\n",
+        ")\n",
+        "\n",
+        "\n",
+        "### Answer question ###\n",
+        "qa_system_prompt = \"\"\"You are an assistant for question-answering tasks. \\\n",
+        "Use the following pieces of retrieved context to answer the question. \\\n",
+        "If you don't know the answer, just say that you don't know. \\\n",
+        "Use three sentences maximum and keep the answer concise.\\\n",
+        "\n",
+        "{context}\"\"\"\n",
+        "qa_prompt = ChatPromptTemplate.from_messages(\n",
+        "    [\n",
+        "        (\"system\", qa_system_prompt),\n",
+        "        MessagesPlaceholder(\"chat_history\"),\n",
+        "        (\"human\", \"{input}\"),\n",
+        "    ]\n",
+        ")\n",
+        "question_answer_chain = create_stuff_documents_chain(llm, qa_prompt)\n",
+        "\n",
+        "rag_chain = create_retrieval_chain(history_aware_retriever, question_answer_chain)\n",
+        "\n",
+        "\n",
+        "### Statefully manage chat history ###\n",
+        "store = {}\n",
+        "\n",
+        "\n",
+        "def get_session_history(session_id: str) -> BaseChatMessageHistory:\n",
+        "    if session_id not in store:\n",
+        "        store[session_id] = ChatMessageHistory()\n",
+        "    return store[session_id]\n",
+        "\n",
+        "\n",
+        "conversational_rag_chain = RunnableWithMessageHistory(\n",
+        "    rag_chain,\n",
+        "    get_session_history,\n",
+        "    input_messages_key=\"input\",\n",
+        "    history_messages_key=\"chat_history\",\n",
+        "    output_messages_key=\"answer\",\n",
+        ")"
+      ],
+      "metadata": {
+        "id": "n-73cAuVxiAZ"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "9ykiyt31xkC_"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
