--- a/System_eng_Part3.ipynb
+++ b/System_eng_Part3.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "A100",
-      "authorship_tag": "ABX9TyNIh3POXiLAbgo1KlfF3gW1",
+      "authorship_tag": "ABX9TyPBfbb1gB9DdPkpANxuzmcc",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,22 +34,10 @@
         "pip install langchain openai pypdf chroma streamlit langchain_openai langchain_community langchain transformers bitsandbytes accelerate torch faiss-gpu faiss-cpu langchain_chroma langchain_experimental"
       ],
       "metadata": {
-        "id": "pRhoGD70xtE4",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "bbf5bbf9-8281-4f59-9399-0333a1527266"
+        "id": "pRhoGD70xtE4"
       },
-      "execution_count": 1,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Successfully installed accelerate-0.31.0 asgiref-3.8.1 backoff-2.2.1 bcrypt-4.1.3 bitsandbytes-0.43.1 chroma-0.2.0 chroma-hnswlib-0.7.3 chromadb-0.5.3 coloredlogs-15.0.1 dataclasses-json-0.6.7 deprecated-1.2.14 dnspython-2.6.1 email_validator-2.2.0 faiss-cpu-1.8.0 faiss-gpu-1.7.2 fastapi-0.111.0 fastapi-cli-0.0.4 gitdb-4.0.11 gitpython-3.1.43 h11-0.14.0 httpcore-1.0.5 httptools-0.6.1 httpx-0.27.0 humanfriendly-10.0 jsonpatch-1.33 jsonpointer-3.0.0 kubernetes-30.1.0 langchain-0.2.5 langchain-core-0.2.9 langchain-text-splitters-0.2.1 langchain_chroma-0.1.1 langchain_community-0.2.5 langchain_experimental-0.0.61 langchain_openai-0.1.8 langsmith-0.1.81 marshmallow-3.21.3 mmh3-4.1.0 monotonic-1.6 mypy-extensions-1.0.0 nvidia-cublas-cu12-12.1.3.1 nvidia-cuda-cupti-cu12-12.1.105 nvidia-cuda-nvrtc-cu12-12.1.105 nvidia-cuda-runtime-cu12-12.1.105 nvidia-cudnn-cu12-8.9.2.26 nvidia-cufft-cu12-11.0.2.54 nvidia-curand-cu12-10.3.2.106 nvidia-cusolver-cu12-11.4.5.107 nvidia-cusparse-cu12-12.1.0.106 nvidia-nccl-cu12-2.20.5 nvidia-nvjitlink-cu12-12.5.40 nvidia-nvtx-cu12-12.1.105 onnxruntime-1.18.0 openai-1.35.3 opentelemetry-api-1.25.0 opentelemetry-exporter-otlp-proto-common-1.25.0 opentelemetry-exporter-otlp-proto-grpc-1.25.0 opentelemetry-instrumentation-0.46b0 opentelemetry-instrumentation-asgi-0.46b0 opentelemetry-instrumentation-fastapi-0.46b0 opentelemetry-proto-1.25.0 opentelemetry-sdk-1.25.0 opentelemetry-semantic-conventions-0.46b0 opentelemetry-util-http-0.46b0 orjson-3.10.5 overrides-7.7.0 posthog-3.5.0 pydeck-0.9.1 pypdf-4.2.0 pypika-0.48.9 python-dotenv-1.0.1 python-multipart-0.0.9 smmap-5.0.1 starlette-0.37.2 streamlit-1.36.0 tiktoken-0.7.0 typing-inspect-0.9.0 ujson-5.10.0 uvicorn-0.30.1 uvloop-0.19.0 watchdog-4.0.1 watchfiles-0.22.0 websockets-12.0\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -65,7 +53,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "c4902ede-c0f0-41b8-987a-61f2f9f3c631"
+        "outputId": "b2202504-0af2-48a1-e39f-42056f8068d5"
       },
       "execution_count": 2,
       "outputs": [
@@ -83,7 +71,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "id": "D72PV_cpwfZV",
         "outputId": "7c37359f-4105-4dc0-b242-33c06ca52a31",
@@ -302,7 +290,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -513,7 +501,7 @@
         "id": "n-73cAuVxiAZ",
         "outputId": "ac86f376-3d77-46be-eefd-2e17fe627888"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -538,7 +526,7 @@
         "id": "9ykiyt31xkC_",
         "outputId": "180db9ed-b488-4be6-f91a-a5175cbaafaf"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -675,7 +663,7 @@
         "tokenizer, model = initialize_model()\n",
         "\n",
         "# Generate LLaMA2 Response\n",
-        "def generate_llama2_response(prompt_input, tokenizer, model):\n",
+        "def generate_llama3_response(prompt_input, tokenizer, model):\n",
         "    SYS_PROMPT = \"\"\"You are an assistant for answering questions.\n",
         "    You are given the extracted parts of a long document and a question. Provide a conversational answer.\n",
         "    If you don't know the answer, just say \"I do not know.\" Don't make up an answer.\"\"\"\n",
@@ -734,7 +722,7 @@
         "        with st.chat_message(\"assistant\"):\n",
         "            with st.spinner(\"Thinking...\"):\n",
         "                prompt_input = rag_with_url(prompt, st.session_state.messages)\n",
-        "                response = generate_llama2_response(prompt_input, tokenizer, model)\n",
+        "                response = generate_llama3_response(prompt_input, tokenizer, model)\n",
         "                placeholder = st.empty()\n",
         "                full_response = ''\n",
         "                for item in response:\n",
@@ -748,12 +736,12 @@
       ],
       "metadata": {
         "id": "RlxZ69ub2yjS",
-        "outputId": "4301013d-29cc-4fa5-91e9-5056d8f548f1",
+        "outputId": "db78fd6a-20b7-418e-b597-953a0902eb0b",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 16,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -773,34 +761,35 @@
       ],
       "metadata": {
         "id": "tXkPWc1P233O",
-        "outputId": "5c070df9-b7aa-4cdc-c925-bd0796fad398",
+        "outputId": "0cee05f7-6969-4dee-ba5c-f8351326ba3b",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 17,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "\u001b[K\u001b[?25h\u001b[37;40mnpm\u001b[0m \u001b[0m\u001b[30;43mWARN\u001b[0m \u001b[0m\u001b[35msaveError\u001b[0m ENOENT: no such file or directory, open '/content/package.json'\n",
+            "\u001b[K\u001b[?25h\u001b[37;40mnpm\u001b[0m \u001b[0m\u001b[34;40mnotice\u001b[0m\u001b[35m\u001b[0m created a lockfile as package-lock.json. You should commit this file.\n",
             "\u001b[0m\u001b[37;40mnpm\u001b[0m \u001b[0m\u001b[30;43mWARN\u001b[0m \u001b[0m\u001b[35menoent\u001b[0m ENOENT: no such file or directory, open '/content/package.json'\n",
             "\u001b[0m\u001b[37;40mnpm\u001b[0m \u001b[0m\u001b[30;43mWARN\u001b[0m\u001b[35m\u001b[0m content No description\n",
             "\u001b[0m\u001b[37;40mnpm\u001b[0m \u001b[0m\u001b[30;43mWARN\u001b[0m\u001b[35m\u001b[0m content No repository field.\n",
             "\u001b[0m\u001b[37;40mnpm\u001b[0m \u001b[0m\u001b[30;43mWARN\u001b[0m\u001b[35m\u001b[0m content No README data\n",
             "\u001b[0m\u001b[37;40mnpm\u001b[0m \u001b[0m\u001b[30;43mWARN\u001b[0m\u001b[35m\u001b[0m content No license field.\n",
             "\u001b[0m\n",
-            "\u001b[K\u001b[?25h+ localtunnel@2.0.2\n",
-            "updated 1 package and audited 36 packages in 0.509s\n",
+            "+ localtunnel@2.0.2\n",
+            "added 22 packages from 22 contributors and audited 22 packages in 1.576s\n",
             "\n",
             "3 packages are looking for funding\n",
             "  run `npm fund` for details\n",
             "\n",
-            "found 2 \u001b[93mmoderate\u001b[0m severity vulnerabilities\n",
+            "found 1 \u001b[93mmoderate\u001b[0m severity vulnerability\n",
             "  run `npm audit fix` to fix them, or `npm audit` for details\n",
-            "\u001b[K\u001b[?25hnpx: installed 22 in 2.157s\n",
-            "your url is: https://silly-fans-sneeze.loca.lt\n",
+            "\u001b[K\u001b[?25hnpx: installed 22 in 1.149s\n",
+            "your url is: https://loose-grapes-bathe.loca.lt\n",
             "^C\n"
           ]
         }
